fixed overlay on mobile

--- a/main.css
+++ b/main.css
@@ -511,6 +511,15 @@ button:hover {
     margin: 50px auto 0 auto;
   }
 
+  .intro-background {
+    background: url("construction2.png") no-repeat center center fixed;
+    background-size: cover;
+    height: 100vh;
+    padding: 0 0;
+    margin: 0 0;
+    opacity: 1;
+  }
+
   .container {
     padding: 0 5px;
   }
@@ -532,6 +541,10 @@ button:hover {
 
   #laptop-picture {
     margin-top: 50px;
+  }
+
+  .item-overlay-content {
+    display: none;
   }
 }
 
@@ -697,6 +710,7 @@ button:hover {
 
 .item-overlay-content {
   padding: 0 3px;
+  display: none;
 }
 
 .thumbnail {
